@@ -1,0 +1,36 @@
+//
+// Copyright (C) 2012 Intel Corporation
+//
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+//
+
+#include "awb/provides/dynamic_parameters_service.h"
+
+typedef class COMMON_SERVICES_CLASS* COMMON_SERVICES;
+
+class COMMON_SERVICES_CLASS
+{
+  private:
+    // The parameter controller is a pure client
+    // so we must instantiate it.
+    DYNAMIC_PARAMS_SERVICE dynamicParamsService;
+
+  public:
+    COMMON_SERVICES_CLASS();
+    ~COMMON_SERVICES_CLASS();
+
+    void Init();
+};
+
